# LIRS-Practise

./: README.md
OpenCV-Tutorials/Image Processing (imgproc module)/: CMakeCache.txt  CMakeLists.txt  Find_contours_demo  General_contours_demo1  Hull_demo  Makefile  cmake_install.cmake
OpenCV-Tutorials/Image Processing (imgproc module)/src/: findContours_demo.cpp  general_contours_demo1.cpp  hull_demo.cpp
OpenCV-Tutorials/Introduction to OpenCV/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplaySampleImage  Installation_in_Linux  Makefile  cmake_install.cmake  display_sample_image.cpp
OpenCV-Tutorials/The Core Functionality (core module)/: Adding_[blending]_two_images_using_OpenCV  Adding_two_images  Basic_linear_transoforms  CMakeCache.txt  CMakeLists.txt  Changing_the_contrast_and_brightness_of_an_image  Discrete_fourier_transform  Disscrete_fourier_transform  File_input_output  How_to_scan_image,_lookup_tables_and_time_measurement_with_OpenCV  How_to_scan_images  Makefile  Mask_operations_on_matrices  Mat_-_The_Basic_Image_Container  Mat_mask_operations  Mat_the_Basic_Image_Container  Operations_with_images  cmake_install.cmake
OpenCV-Tutorials/The Core Functionality (core module)/src/: adding_two_images.cpp  basic_linear_transforms.cpp  discrete_fourier_transform.cpp  file_input_output.cpp  mat_mask_operations.cpp  mat_the_basic_image_container.cpp
articles/: LinksToArticles.txt  К.Фу Р.Гонсалес К.Ли. Робототехника 1 .djvu  К.Фу Р.Гонсалес К.Ли. Робототехника 2.djvu  Отрывок_из_отчета_гранта_по_калибровке_Инд.docx
rotator_pkg/: CMakeLists.txt  package.xml
rotator_pkg/src/: rotator.cpp  rotator.h  run_rotator.cpp
stairs_detection/camera_description/: CMakeLists.txt  package.xml
stairs_detection/camera_description/launch/: world_for_testing.launch
stairs_detection/camera_description/urdf/: camera.gazebo  camera.xacro  camera2.gazebo  camera2.xacro  camera3.gazebo  camera3.xacro  camera4.gazebo  camera4.xacro  camera5.gazebo  camera5.xacro  camera6.gazebo  camera6.xacro
stairs_detection/camera_description/worlds/: my_world.world  stairs.dae  stairs2.dae
stairs_detection/stairs_detection_pkg/: CMakeLists.txt  package.xml
stairs_detection/stairs_detection_pkg/cfg/: stairs_detector.cfg
stairs_detection/stairs_detection_pkg/include/stairs_detection_pkg/: neighbour_finder.h  stairs_detector.h
stairs_detection/stairs_detection_pkg/launch/: stairs_detection.launch
stairs_detection/stairs_detection_pkg/src/: depth_converter_node.cpp  stairs_detector.cpp  stairs_detector_node.cpp
test_pkg/: CMakeLists.txt  package.xml
test_pkg/src/: test.cpp
