<?xml version="1.0"?>
<package>
  <name>camera_description</name>
  <version>0.0.0</version>
  <description>The camera_description package</description>

  <maintainer email="maksim.mystafa@gmail.com">maxim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>